--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -5,14 +5,14 @@ body {
 }
 #heading:hover {
   color: aqua;
-  font-size: x-large;
+  font-size: 1.1rem;
 }
 .heading_and_nav_bar {
   display: flex;
   justify-content: space-between;
   color: white;
   flex-wrap: wrap;
-}   
+}
 @media (max-width: 500px) {
   .heading_and_nav_bar {
     display: flex;
@@ -31,31 +31,33 @@ body {
   flex-wrap: wrap;
 }
 span {
-  font-size: larger;
-  padding: 10px;
-  padding-left: 50px;
+  font-size: x-large;
+  height: fit-content;
+  margin: 15px;
 }
 span:hover {
-  font-size: 23px;
-  padding: 10px;
-  padding-left: 50px;
+  font-size: xx-large;
   color: lime;
   text-decoration: dashed underline;
+}
+p {
+  margin: 0;
 }
 #computer_img {
   width: 100%;
 }
 #about_me_title {
   display: flex;
-  justify-content: center;
-  padding-bottom: 15px;
+  text-align: center;
+  margin: 19px auto;
   color: white;
+  width: fit-content;
 }
 #about_me_title:hover {
   display: flex;
   justify-content: center;
   padding-bottom: 15px;
-  font-size: 30px;
+  font-size: 25px;
   color: orange;
   text-decoration: dashed underline;
 }
@@ -83,8 +85,12 @@ span:hover {
     min-width: 100%;
   }
 }
-#periodic_table_img {
+a {
   width: 20%;
+}
+#periodic_table_img {
+  width: 100%;
+  height: 100%;
 }
 #about_me_heading {
   display: flex;
@@ -97,6 +103,12 @@ span:hover {
 }
 .about_me_text {
   border: 2px solid orange;
+  padding: 1%;
+  margin-left: 3%;
+  color: white;
+}
+.about_me_text:hover {
+  border: 5px solid orange;
   padding: 1%;
   margin-left: 3%;
   color: white;
@@ -140,7 +152,7 @@ hr {
 }
 #about_user_header:hover {
   color: skyblue;
-  font-size: 30px;
+  font-size: 25px;
 }
 .about_user {
   display: flex;
@@ -153,19 +165,15 @@ form {
   flex-direction: column;
 }
 .about_user_form {
-  background-image: url(https://th.bing.com/th/id/OIP.UMgXvcG7dagM6zztcqGHNAHaEK?pid=ImgDet&rs=1);
+  background-image: url("rainbow-paint-background-475x415.png");
   padding: 2% 8% 2% 8%;
   color: rgb(255, 255, 255);
   border-radius: 25px;
 }
-textarea {
-  display: flex;
-  align-self: center;
-  width: 250px;
-}
 #submit {
   background-color: skyblue;
   border-radius: 12px;
+  font-size: large;
 }
 #footer {
   display: flex;
@@ -178,4 +186,28 @@ textarea {
     display: flex;
     justify-content: center;
   }
+}
+textarea,
+input {
+  display: flex;
+  align-self: center;
+  border-radius: 10px;
+  border: 3px solid grey;
+  background-color: rgb(184, 255, 255);
+  font-family: "courier new";
+  font-weight: bold;
+}
+textarea {
+  width: 250px;
+}
+textarea:hover,
+input:hover {
+  border-radius: 10px;
+  border: 3.5px solid rgb(96, 96, 96);
+  background-color: rgb(184, 255, 255);
+}
+label {
+  font-size: large;
+  font-weight: bold;
+  color: beige;
 }
